Inicijalna verzija sajta Stojkovic Gradnja

--- a/scss/bootstrap/scss/_variables.scss
+++ b/scss/bootstrap/scss/_variables.scss
@@ -1140,3 +1140,4 @@ $user-selects: all, auto, none !default;
 
 $print-page-size:                   a3 !default;
 $print-body-min-width:              map-get($grid-breakpoints, "lg") !default;
+// update commit message
