--- a/scss/bootstrap/scss/_functions.scss
+++ b/scss/bootstrap/scss/_functions.scss
@@ -142,3 +142,4 @@
 
   @return if($return-calc == true, calc(#{$value1} - #{$value2}), $value1 + unquote(" - ") + $value2);
 }
+// update commit message
