--- a/scss/bootstrap/scss/_input-group.scss
+++ b/scss/bootstrap/scss/_input-group.scss
@@ -190,3 +190,4 @@
 .input-group > .input-group-prepend:first-child > .input-group-text:not(:first-child) {
   @include border-left-radius(0);
 }
+// update commit message
