--- a/scss/bootstrap/scss/_list-group.scss
+++ b/scss/bootstrap/scss/_list-group.scss
@@ -152,3 +152,4 @@
 @each $color, $value in $theme-colors {
   @include list-group-item-variant($color, theme-color-level($color, -9), theme-color-level($color, 6));
 }
+// update commit message
